# zingmusic-home-assistant-addon

./: gitignore  repository.json
zingmusic/: .dockerignore  CHANGELOG.md  Dockerfile  apparmor.txt  config.yaml  pyproject.toml  repository.json  requirements.txt  requirements_all.txt  run.sh
zingmusic/music_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
zingmusic/zingmusic_provider/: __init__.py  zingmusic.py  zingmusic_api.py
