[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music_assistant"
version = "1.0.0"
description = "Custom Music Assistant with ZingMusic provider"
authors = [{name = "Shmily Werzberger", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohttp",
    "aiofiles",
    "aiosqlite",
    "jinja2",
    "shortuuid"
]

[project.scripts]
music-assistant = "music_assistant.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_assistant"]
